# FreelanceTrack-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  server.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 673364e565e8_initial_tables.py
app/: config.py  database.py  exceptions.py  logger.py  main.py  security.py
app/dependencies/: auth.py
app/helpers/: project_helpers.py  user_helpers.py
app/models/: base.py  project.py  timelog.py  user.py
app/models.py/: base.py  project.py  timelog.py  user.py
app/routers/: auth.py  project.py  reports.py  timelog.py
app/schemas/: auth.py  base.py  project.py  report.py  timelog.py  user.py
app/services/: auth_service.py  pdf_service.py
app/tests/: conftest.py  test_auth.py  test_projects.py  test_reports.py  test_timelogs.py
