[project]
name = "freelancetrack_api"
version = "0.1.0"
description = "A FastAPI backend for freelancers to track projects, log hours, and generate invoices"
requires-python = ">=3.11"

dependencies = [
    # FastAPI + ASGI server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0", # [standard] includes websocket + reload support
    # Database (async SQLAlchemy + PostgreSQL driver)
    "sqlalchemy[asyncio]>=2.0.0", # SQLAlchemy 2.0 has full async support
    "asyncpg>=0.29.0", # async PostgreSQL driver (much faster than psycopg2)
    "alembic>=1.13.0", # DB migrations
    # Auth
    "python-jose[cryptography]>=3.3.0", # JWT encode/decode
    "passlib[argon2]==1.7.4", # password hashing
    # Validation & Config
    "pydantic[email]>=2.0.0", # Pydantic v2 — faster, stricter
    "pydantic-settings>=2.0.0", # reads .env into a typed Settings class
    # Utilities
    "python-multipart>=0.0.9", # needed for form data (login form)
    "httpx>=0.27.0", # async HTTP client (used in tests)
    # PDF generation
    "reportlab>=4.2.0", # generate invoice PDFs
    # Redis (for caching + JWT blacklist later)
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.11",
    "zxcvbn>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",   # async test support
    "pytest-cov>=5.0.0",        # coverage reports
]

[tool.pytest.ini_options]
asyncio_mode = "auto"           # all async tests run automatically

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
