[project]
name = "freelancetrack_api"
version = "0.1.0"
description = "A FastAPI backend for freelancers to track projects, log hours, and generate invoices"
requires-python = ">=3.11"
dependencies = [
    # FastAPI + ASGI server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.11",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]==1.7.4",
    # Validation & Config
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Utilities
    "python-multipart>=0.0.9",
    "zxcvbn>=4.5.0",
    # PDF generation
    "reportlab>=4.2.0",
    # Redis
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",   # ← add this, needed for SQLite async in tests
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]